  correctly (AI::args->{unstuck}{count}).
- Show coordinates of players when they are added/removed from 'pl'.
  (TODO: Do this for monsters too.)
- Ability to bypass the RO client's bot detection (the "Do not use bots!"
  message).
- Implemented 0189 no_teleport packet so that "Unavailable Area To
  Teleport/Memo" message is now displayed.
- 'is' command now accepts item names.

New commands:
- getplayerinfo (number)
  Ask the server for the name of the object with that ID. You will not
  see the reply unless you have debug level 2.
- storage addfromcart <cart_item> [<amount>]
  storage gettocart <storage_item> [<amount>]
  Support for adding/getting items directly to/from merchant cart
- storage [<eq|u|nu>]
  Only list equipments (eq), usable (u), or non usable (nu) items.
- whoami
  Displays your character and account ID.
- damage
  Displays the monsters and skills that damaged you.
- help [command]
  not new but updated and more useful
  you get now all options for a specific command
- guild break <guild name>
  Disband your guild.
- guild create <name>
  Create a guild.
- guild kick <list number> <reason>
  Kick a guild member out of the guild.
- storage desc <storage item #>
  Display storage item description.
- eq
  Lists what you are wearing in each equipment slot.
- take first
  Takes the first item on the ground.
- The sell commands have been changed. The new sell commands are:

  sell <inventory item #> [<amount>]
    Put inventory items in sell list.

  sell list
    Show items in the sell list.

  sell done
    Sell everything in the sell list.

  sell cancel
    Clear the sell list.

- The exp commands have been changed. The new exp commands are:

  exp
    only shows exp

  exp report
    shows the old exp report (shows everything)

  exp monster
    shows monster killed count only

  exp item
    shows item change count only

  exp reset
    resets the exp report

New config options:
- partySkill: target_dist (range)